// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Traverse Should work: __generated__/account-levelisation.upsert.query.queries.ts 1`] = `
"export interface Params {
    levelisationId: unknown;
    start?: Date;
}
export interface Result {
    id: number;
}
export interface Query {
    params: Params;
    result: Result;
}
"
`;

exports[`Traverse Should work: __generated__/account-levelisations.query.queries.ts 1`] = `
"export interface Params {
    q: \\"\\";
    resolvedPostlev: \\"\\" | boolean;
    state: (\\"Done\\" | \\"Pending\\");
    levelisationId: number;
    ids: number[];
    sortField: \\"totalPayment\\" | \\"vatPayment\\" | \\"generationPayment\\" | \\"exportPayment\\" | \\"generationEnergy\\" | \\"exportEnergy\\" | \\"cfrFitId\\" | \\"state\\" | \\"isAccepted\\" | \\"error\\" | \\"exportType\\";
    sortOrder: \\"DESC\\" | \\"ASC\\";
    limit: number;
    offset: number;
}
export interface Result {
    id: number;
    levelisationId: number;
    accountId: number;
    installationId: number;
    state: \\"Done\\" | \\"Pending\\";
    isAccepted: boolean;
    generationStartReadOn?: Date;
    generationStartReadValue?: string;
    generationEndReadOn?: Date;
    generationEndReadValue?: string;
    generationPercentageSplit?: string;
    generationPayment?: string;
    generationEnergy?: string;
    exportStartReadOn?: Date;
    exportStartReadValue?: string;
    exportEndReadOn?: Date;
    exportEndReadValue?: string;
    exportPercentageSplit?: string;
    exportPayment?: string;
    exportEnergy?: string;
    exportType: \\"Off Grid\\" | \\"Deemed\\" | \\"Metered Export\\" | \\"Off Grid\\" | \\"PPA\\" | \\"Deemed\\" | \\"Metered Export\\" | \\"Off Grid\\" | \\"PPA\\" | \\"Deemed\\" | \\"Metered Export\\" | \\"PPA\\";
    technologyType: \\"H\\" | \\"W\\" | \\"AD\\" | \\"CHP\\" | \\"PV\\" | \\"H\\" | \\"W\\" | \\"AD\\" | \\"CHP\\" | \\"PV\\";
    totalPayment?: string;
    vatPayment?: string;
    generationPeriods?: unknown;
    exportPeriods?: unknown;
    errorCode: unknown;
    errorParams: unknown;
    cfrFitId: string;
    resolvedPostlevId?: number;
    isBacsPaymentsSent?: boolean;
    isChequePaymentsSent?: boolean;
}
export interface Query {
    params: Params;
    result: Result;
}
"
`;

exports[`Traverse Should work: __generated__/account-levelisations-bulk-close-accounts.query.queries.ts 1`] = `
"export interface Params {
    ids: number[];
}
export interface Result {
    id: number;
}
export interface Query {
    params: Params;
    result: Result;
}
"
`;

exports[`Traverse Should work: __generated__/account-levelisations-set-bulk-update.query.queries.ts 1`] = `
"export interface Params {
    ids: number[];
}
export interface Result {
    id: number;
}
export interface Query {
    params: Params;
    result: Result;
}
"
`;

exports[`Traverse Should work: __generated__/accounts.list.query.queries.ts 1`] = `
"export interface Params {
    q: \\"\\" | string;
    ids: number[];
}
export interface Result {
    total: number;
}
export interface Query {
    params: Params;
    result: Result;
}
"
`;

exports[`Traverse Should work: __generated__/accounts.queries.ts 1`] = `
"export interface Params {
}
export interface Result {
}
export interface Query {
    params: Params;
    result: Result;
}
"
`;

exports[`Traverse Should work: __generated__/accounts.query.queries.ts 1`] = `
"export interface Params {
    q: \\"\\" | string;
    ids: number[];
    limit: number;
    offset: number;
}
export interface Result {
    id: number;
    state: \\"Active\\" | \\"Pending\\" | \\"Dispute\\" | \\"Closed\\";
    startOn?: Date;
    firstName: string;
    lastName: string;
    email?: string;
    address: string;
    fitIds: string[];
}
export interface Query {
    params: Params;
    result: Result;
}
"
`;

exports[`Traverse Should work: __generated__/bacs.query.queries.ts 1`] = `
"export interface Params {
    quarter?: string;
    perPage: string;
    offset: string;
}
export interface Result {
    fitId: string;
    name?: string;
    amount: string;
    quarter?: string;
    bankDetails: string;
    addressLine1?: string;
    addressLine2?: string;
    addressLine3?: string;
    postcode: string;
}
export interface Query {
    params: Params;
    result: Result;
}
"
`;

exports[`Traverse Should work: __generated__/contracts.queries.ts 1`] = `
"export interface Params {
}
export interface Result {
}
export interface Query {
    params: Params;
    result: Result;
}
"
`;

exports[`Traverse Should work: __generated__/delete-accounts.query.queries.ts 1`] = `
"export interface Params {
    type: \\"SEG\\" | \\"FIT\\";
    state: \\"Active\\" | \\"Pending\\" | \\"Dispute\\" | \\"Closed\\";
}
export interface Result {
    id: number;
    sourceSystemId?: number;
    customerId: number;
}
export interface Query {
    params: Params;
    result: Result;
}
"
`;

exports[`Traverse Should work: __generated__/generation-read-data.query.queries.ts 1`] = `
"export interface Params {
    installationId: number;
    exportDateOn: Date;
}
export interface Result {
    dateOn: Date;
    value: number;
}
export interface Query {
    params: Params;
    result: Result;
}
"
`;

exports[`Traverse Should work: __generated__/installation-meter-update.query.queries.ts 1`] = `
"export interface Params {
    removalDate: unknown;
    meterId: number;
}
export interface Result {
}
export interface Query {
    params: Params;
    result: Result;
}
"
`;

exports[`Traverse Should work: __generated__/installations.queries.ts 1`] = `
"export interface Params {
}
export interface Result {
}
export interface Query {
    params: Params;
    result: Result;
}
"
`;

exports[`Traverse Should work: __generated__/meter-reads.queries.ts 1`] = `
"export interface Params {
}
export interface Result {
}
export interface Query {
    params: Params;
    result: Result;
}
"
`;

exports[`Traverse Should work: __generated__/process-batch.query.queries.ts 1`] = `
"export interface Params {
    fitIds: string[];
}
export interface Result {
    cfrFiTId?: string;
    email?: string;
    contactName: string;
    company?: string;
    line1?: string;
    line2: string;
    town?: string;
    postcode: string;
    county?: string;
    country: string;
}
export interface Query {
    params: Params;
    result: Result;
}
"
`;

exports[`Traverse Should work: __generated__/rates-by-tarrif-ids.query.queries.ts 1`] = `
"export interface Params {
    ids: number[][];
}
export interface Result {
    tariffId: number;
    rate: string;
    startOn: Date;
    tariffCode: string;
    tariffType: \\"Export\\" | \\"Generation\\" | \\"SEG\\";
    endOn?: Date;
}
export interface Query {
    params: Params;
    result: Result;
}
"
`;

exports[`Traverse Should work: __generated__/read-create.query.queries.ts 1`] = `
"export interface Params {
    meterId: number;
    reason?: string;
    type: \\"Opening\\" | \\"Closing\\" | \\"Quarterly\\" | \\"Meter Verification\\";
    dateOn: Date;
    submittedAt?: Date;
    value: number;
}
export interface Result {
    id: number;
    value: number;
    meterId: number;
    submittedAt?: Date;
}
export interface Query {
    params: Params;
    result: Result;
}
"
`;

exports[`Traverse Should work: __generated__/reads-by-account-id.query.queries.ts 1`] = `
"export interface Params {
    id: number;
    offset: string;
    perPage: string;
}
export interface Result {
    id: number;
    msn: string;
    meterId: number;
    dateOn: Date;
    value: number;
    type: \\"Opening\\" | \\"Closing\\" | \\"Quarterly\\" | \\"Meter Verification\\";
    reason?: string;
    createdAt: Date;
    updatedAt?: Date;
    sourceSystemId?: number;
    mpan: string;
}
export interface Query {
    params: Params;
    result: Result;
}
"
`;

exports[`Traverse Should work: __generated__/tables.queries.ts 1`] = `
"export interface Params {
    tableNames: {
        schema: unknown;
        name: unknown;
    }[];
}
export interface Result {
    type: \\"Table\\";
    name: {
        schema: string;
        name: string;
    };
    columns: {
        name: string;
        isNullable: string;
        enum: string;
        type: string;
    }[];
}
export interface Query {
    params: Params;
    result: Result;
}
"
`;

exports[`Traverse Should work: __generated__/tariff-rates.queries.ts 1`] = `
"export interface Params {
}
export interface Result {
}
export interface Query {
    params: Params;
    result: Result;
}
"
`;
